# dot-it-blockchain-game

./: README.md  package-lock.json
backend/dot-game/: Cargo.toml
backend/dot-game/src/: lib.rs
frontend/dot-game-frontend/: README.md  package-lock.json  package.json
frontend/dot-game-frontend/public/: index.html
frontend/dot-game-frontend/src/: App.css  App.js  index.js
frontend/dot-game-frontend/src/components/: Dot.js  HighScores.js
